# ini

./: .gitignore  CMakeLists.txt
Debug/: ini  test.ini  watchdog.conf
src/: IniFile.cpp  ini.cpp
test/: TestIniFile.cpp  test.cpp
